[COM_COURSES] quick fix for overlapping buttons on video resume playback screen

--- a/components/com_courses/assets/css/hubpresenter.css
+++ b/components/com_courses/assets/css/hubpresenter.css
@@ -35,4 +35,10 @@
 		float: left;
 		width: 320px;
 	}
+	#restart-video {
+		left: 18%;
+	}
+	#resume-video {
+		right: 18%;
+	}
 }
